# hbase-thrift

./: MANIFEST.in  Makefile  setup.cfg
