[metadata]
name = hbase_thrift
version = 0.20.4
description = Python client for HBase Thrift interface
long_description = file: README.md
long_description_content_type = text/markdown
url = http://hbase.org/
author = Jeff Hammerbacher
author_email = hammer@cloudera.com
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: Apache Software License
keywords = database hbase thrift

[options]
packages = find:
install_requires =
    Thrift
include_package_data = True
scripts = scripts/Hbase-remote
