[metadata]
name = hbase_thrift
version = 0.20.4
description = Python client for HBase Thrift interface
long_description = file: README.md
long_description_content_type = text/markdown
url = http://hbase.org/
author = Jeff Hammerbacher
author_email = hammer@cloudera.com
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Software Development :: Libraries
    Topic :: Database
    Topic :: Database :: Front-Ends
keywords = database hbase thrift

[options]
packages = find:
install_requires =
    Thrift
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
scripts = scripts/Hbase-remote

[bdist_wheel]
universal = True
